# signer

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  demo.tape  install.ps1  install.sh
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml  rust-publish.yml  rust.yml
crates/: README.md
crates/signer/: Cargo.toml
crates/signer-aptos/: Cargo.toml
crates/signer-aptos/src/: error.rs  lib.rs  tests.rs
crates/signer-btc/: Cargo.toml
crates/signer-btc/src/: error.rs  lib.rs  tests.rs
crates/signer-cli/: Cargo.toml
crates/signer-cli/src/: main.rs  output.rs
crates/signer-cli/src/commands/: aptos.rs  btc.rs  cosmos.rs  evm.rs  fil.rs  mod.rs  nostr.rs  spark.rs  sui.rs  svm.rs  ton.rs  tron.rs  xrpl.rs
crates/signer-core/: Cargo.toml
crates/signer-core/src/: error.rs  lib.rs
crates/signer-cosmos/: Cargo.toml
crates/signer-cosmos/src/: error.rs  lib.rs  tests.rs
crates/signer-evm/: Cargo.toml
crates/signer-evm/src/: eip712.rs  error.rs  lib.rs  rlp.rs  tests.rs
crates/signer-fil/: Cargo.toml
crates/signer-fil/src/: error.rs  lib.rs  tests.rs
crates/signer-nostr/: Cargo.toml
crates/signer-nostr/src/: error.rs  lib.rs  tests.rs
crates/signer-primitives/: Cargo.toml
crates/signer-primitives/src/: ed25519.rs  error.rs  lib.rs  macros.rs  schnorr.rs  secp256k1.rs  testing.rs  tests.rs
crates/signer-spark/: Cargo.toml
crates/signer-spark/src/: error.rs  lib.rs  tests.rs
crates/signer-sui/: Cargo.toml
crates/signer-sui/src/: error.rs  lib.rs  tests.rs
crates/signer-svm/: Cargo.toml
crates/signer-svm/src/: error.rs  lib.rs  tests.rs
crates/signer-ton/: Cargo.toml
crates/signer-ton/src/: error.rs  lib.rs  tests.rs
crates/signer-tron/: Cargo.toml
crates/signer-tron/src/: error.rs  lib.rs  tests.rs
crates/signer-xrpl/: Cargo.toml
crates/signer-xrpl/src/: error.rs  lib.rs  tests.rs
crates/signer/src/: lib.rs
signer/: Cargo.toml
signer-btc/: Cargo.toml
signer-btc/src/: error.rs  lib.rs
signer-cli/: Cargo.toml
signer-cli/src/: main.rs  output.rs
signer-cli/src/commands/: btc.rs  cosmos.rs  evm.rs  mod.rs  sui.rs  svm.rs  ton.rs
signer-core/src/: error.rs  lib.rs
signer-cosmos/: Cargo.toml
signer-cosmos/src/: error.rs  lib.rs
signer-evm/: Cargo.toml
signer-evm/src/: eip712.rs  error.rs  lib.rs  rlp.rs
signer-fil/: Cargo.toml
signer-fil/src/: error.rs  lib.rs
signer-spark/: Cargo.toml
signer-spark/src/: error.rs  lib.rs
signer-sui/: Cargo.toml
signer-sui/src/: error.rs  lib.rs
signer-svm/: Cargo.toml
signer-svm/src/: error.rs  lib.rs
signer-ton/: Cargo.toml
signer-ton/src/: error.rs  lib.rs
signer-tron/: Cargo.toml
signer-tron/src/: error.rs  lib.rs
signer-xmr/: Cargo.toml
signer-zec/: Cargo.toml
signer/src/: chain.rs  curve.rs  eip712.rs  error.rs  hardening.rs  hd.rs  lib.rs  mnemonic.rs  rlp.rs  secret.rs  traits.rs
signer/src/chains/: bitcoin.rs  cosmos.rs  evm.rs  filecoin.rs  mod.rs  solana.rs  spark.rs  sui.rs  ton.rs  tron.rs
skills/signer/: SKILL.md
tests/goldens/: README.md  generate.mjs  package.json
