[workspace]
members = [
    "crates/signer", "crates/signer-primitives",
    "crates/signer-btc", "crates/signer-evm", "crates/signer-svm",
    "crates/signer-cosmos", "crates/signer-tron", "crates/signer-spark",
    "crates/signer-fil", "crates/signer-ton", "crates/signer-sui",
    "crates/signer-xrpl",
    "crates/signer-aptos",
    "crates/signer-cli",
]
default-members = ["crates/signer"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/signer"
description = "Lightweight multi-chain transaction signer."

[workspace.dependencies]
signer-primitives = { version = "0.6", path = "crates/signer-primitives", default-features = false }
signer-btc = { version = "0.6", path = "crates/signer-btc", default-features = false }
signer-evm = { version = "0.6", path = "crates/signer-evm", default-features = false }
signer-svm = { version = "0.6", path = "crates/signer-svm", default-features = false }
signer-cosmos = { version = "0.6", path = "crates/signer-cosmos", default-features = false }
signer-tron = { version = "0.6", path = "crates/signer-tron", default-features = false }
signer-spark = { version = "0.6", path = "crates/signer-spark", default-features = false }
signer-fil = { version = "0.6", path = "crates/signer-fil", default-features = false }
signer-ton = { version = "0.6", path = "crates/signer-ton", default-features = false }
signer-sui = { version = "0.6", path = "crates/signer-sui", default-features = false }
signer-xrpl = { version = "0.6", path = "crates/signer-xrpl", default-features = false }
signer-aptos = { version = "0.6", path = "crates/signer-aptos", default-features = false }

# Cryptography (versions aligned with kobe)
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2.2.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
blake2 = { version = "0.10", default-features = false }
ripemd = { version = "0.2", default-features = false }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }

# Encoding
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1", features = ["derive"] }

# Random
getrandom = { version = "0.4", default-features = false }

# Utilities
zeroize = { version = "1.8.2", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }

# Kobe (optional bridge)
kobe-btc = { version = "0.8", default-features = false, features = ["std"] }
kobe-evm = { version = "0.8", default-features = false, features = ["std"] }
kobe-svm = { version = "0.8", default-features = false, features = ["std"] }
kobe-cosmos = { version = "0.8", default-features = false, features = ["std"] }
kobe-tron = { version = "0.8", default-features = false, features = ["std"] }
kobe-spark = { version = "0.8", default-features = false, features = ["std"] }
kobe-fil = { version = "0.8", default-features = false, features = ["std"] }
kobe-ton = { version = "0.8", default-features = false, features = ["std"] }
kobe-sui = { version = "0.8", default-features = false, features = ["std"] }
kobe-xrpl = { version = "0.8", default-features = false, features = ["std"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
unsafe_code = "deny"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unused_qualifications = "warn"
unused_imports = "warn"
unused_macro_rules = "warn"
unused_must_use = "deny"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
non_ascii_idents = "deny"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"
keyword_idents = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
all = { level = "warn", priority = -1 }
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
exit = "warn"

undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
mem_forget = "warn"
clone_on_ref_ptr = "warn"
rc_buffer = "warn"
rc_mutex = "warn"

fallible_impl_from = "warn"
error_impl_error = "warn"
let_underscore_must_use = "warn"

rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
struct_excessive_bools = "warn"
large_types_passed_by_value = "warn"
implicit_hasher = "warn"
redundant_type_annotations = "warn"

str_to_string = "warn"
implicit_clone = "warn"
string_lit_as_bytes = "warn"
needless_raw_string_hashes = "warn"
format_push_string = "warn"

cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
as_underscore = "warn"
cast_precision_loss = "allow"

future_not_send = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
significant_drop_tightening = "warn"

match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
option_if_let_else = "warn"
wildcard_enum_match_arm = "allow"

cognitive_complexity = "warn"
too_many_lines = "warn"
excessive_nesting = "warn"

used_underscore_binding = "warn"
verbose_file_reads = "warn"
tests_outside_test_module = "warn"
unnecessary_self_imports = "warn"
infinite_loop = "warn"
allow_attributes_without_reason = "warn"
missing_assert_message = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"

missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
doc_markdown = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"

exhaustive_enums = "allow"
exhaustive_structs = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "warn"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
redundant_pub_crate = "allow"
