[package]
name = "signer-btc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitcoin transaction signer — secp256k1 ECDSA, message signing."

[dependencies]
k256.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-btc = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-btc"]

[lints]
workspace = true
