[package]
name = "signer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-chain transaction signing CLI tool."
keywords = ["crypto", "signer", "bitcoin", "ethereum", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "signer"
path = "src/main.rs"

[dependencies]
signer-core.workspace = true
signer-btc.workspace = true
signer-evm.workspace = true
signer-svm.workspace = true
signer-cosmos.workspace = true
signer-tron.workspace = true
signer-spark.workspace = true
signer-fil.workspace = true
signer-ton.workspace = true
signer-sui.workspace = true
k256.workspace = true
clap.workspace = true
colored.workspace = true
hex = { workspace = true, features = ["std"] }
bs58 = { workspace = true, features = ["std"] }
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
