[package]
name = "signer-cosmos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmos transaction signer — secp256k1 ECDSA + SHA-256."

[dependencies]
k256.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-cosmos = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-cosmos"]

[lints]
workspace = true
