[package]
name = "signer-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM transaction signer wrapping alloy-signer-local."

[dependencies]
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-evm = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-evm"]

[lints]
workspace = true
