[package]
name = "signer-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM transaction signer — EIP-191, EIP-712, typed transaction signing."

[dependencies]
k256.workspace = true
sha3.workspace = true
hex.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-evm = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-evm"]

[lints]
workspace = true
