[package]
name = "signer-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filecoin transaction signer — secp256k1 ECDSA + Blake2b."

[dependencies]
signer-core.workspace = true
k256.workspace = true
rand_core.workspace = true
blake2.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-fil = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-fil"]

[lints]
workspace = true
