[package]
name = "signer-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana transaction signer wrapping ed25519-dalek."

[dependencies]
ed25519-dalek.workspace = true
bs58.workspace = true
getrandom.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true

kobe-svm = { workspace = true, optional = true }

[features]
default = []
kobe = ["dep:kobe-svm"]

[lints]
workspace = true
