[package]
name = "signer-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tron transaction signer using secp256k1 (k256)."

[dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
bs58 = { version = "0.5", features = ["check"] }
hex.workspace = true
thiserror.workspace = true

kobe-tron = { version = "0.5", path = "../../kobe/kobe-tron", default-features = false, features = ["std"], optional = true }

[features]
default = []
kobe = ["dep:kobe-tron"]

[lints]
workspace = true
