[package]
name = "signer-aptos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aptos transaction signer — Ed25519 signing with SHA3-256 domain separation."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std", "zeroize/std"]
alloc = ["signer-primitives/alloc", "zeroize/alloc"]
getrandom = ["dep:getrandom"]

[dependencies]
signer-primitives.workspace = true
ed25519-dalek.workspace = true
sha3.workspace = true
getrandom = { workspace = true, optional = true }
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[lints]
workspace = true
