[package]
name = "signer-aptos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aptos transaction signer — Ed25519 signing with SHA3-256 domain separation."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-aptos"]

[dependencies]
signer-primitives = { workspace = true, features = ["ed25519"] }
ed25519-dalek.workspace = true
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-aptos = { workspace = true, optional = true }

[dev-dependencies]
signer-primitives = { workspace = true, features = ["testing"] }

[lints]
workspace = true
