[package]
name = "signer-btc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitcoin transaction signer — secp256k1 ECDSA, message signing."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-btc"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-btc = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
