[package]
name = "signer-btc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Bitcoin transaction signer — secp256k1 ECDSA, message signing."
keywords = ["crypto", "signer", "bitcoin", "secp256k1", "wallet"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-btc"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
hex.workspace = true
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true

kobe-btc = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
signer-primitives = { workspace = true, features = ["testing"] }
# Dev-only: `verifymessage`-style BIP-137 recovery round-trip in the
# test suite. The production surface stays on `Signer::verify_hash`.
k256 = { workspace = true, features = ["ecdsa"] }

[lints]
workspace = true
