[package]
name = "signer-cosmos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmos transaction signer — secp256k1 ECDSA + SHA-256."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-cosmos"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
sha2.workspace = true
ripemd.workspace = true
bech32.workspace = true
hex.workspace = true
thiserror.workspace = true

kobe-cosmos = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
