[package]
name = "signer-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM transaction signer — EIP-191, EIP-712, typed transaction signing."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std", "zeroize/std"]
alloc = ["signer-primitives/alloc", "zeroize/alloc"]
getrandom = ["dep:getrandom"]
kobe = ["dep:kobe-evm"]

[dependencies]
signer-primitives.workspace = true
k256.workspace = true
getrandom = { workspace = true, optional = true }
sha3.workspace = true
hex.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-evm = { workspace = true, optional = true }

[lints]
workspace = true
