[package]
name = "signer-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EVM transaction signer — EIP-191, EIP-712, typed transaction signing."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std"]
alloc = ["signer-primitives/alloc"]
getrandom = ["signer-primitives/getrandom"]
kobe = ["dep:kobe-evm"]

[dependencies]
signer-primitives = { workspace = true, features = ["secp256k1"] }
sha3.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true

kobe-evm = { workspace = true, optional = true }

[dev-dependencies]
k256.workspace = true

[lints]
workspace = true
