[package]
name = "signer-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filecoin transaction signer — secp256k1 ECDSA + Blake2b."

[features]
default = ["std"]
std = ["alloc", "signer-primitives/std", "zeroize/std"]
alloc = ["signer-primitives/alloc", "zeroize/alloc"]
getrandom = ["rand_core/getrandom"]
kobe = ["dep:kobe-fil"]

[dependencies]
signer-primitives.workspace = true
k256.workspace = true
rand_core.workspace = true
blake2.workspace = true
hex.workspace = true
zeroize.workspace = true
thiserror.workspace = true

kobe-fil = { workspace = true, optional = true }

[lints]
workspace = true
